# tauri-test

./: COMPARISON.md  components.d.ts  index.html  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.vue  context.ts  main.ts  router.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  server.rs  utils.rs
src-tauri/src/commands/: load_projects.rs  mod.rs
src/components/: Failure.vue
src/components/layouts/: ProjectsLayout.vue
src/components/project/: RunningTask.vue
src/routes/: Dashboard.vue  Index.vue  Project.vue
src/stores/: projects.ts  repository.ts
