[package]
name = "tauri-app"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
async-trait = "0.1.80"
tauri = { version = "1", features = [
	"path-all",
	"dialog-open",
	"fs-all",
	"config-json5",
	"shell-open",
	"tracing",
] }
tauri-plugin-persisted-scope = "0"
multilink = { version = "1.0.1", features = ["http-server"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
